Fixed fader indicators on mobile display

--- a/src/assets/stylesheets/scss/components/_fader.scss
+++ b/src/assets/stylesheets/scss/components/_fader.scss
@@ -117,16 +117,5 @@
             left: auto;
             right: 0;
         }
-        &__header {
-            margin-bottom: 0;
-            margin-top: var(--gutter-m);
-        }
-        // &--indicators-centered {
-        //     .fader__indicators {
-        //         left: 50%;
-        //         right: auto;
-        //         transform: translate3d(-50%, -50%, 0);
-        //     }
-        // }
     }
 }
